USAGOV-1469-Homepage-changes-grid-alignment: Fix carousel bugs

--- a/web/themes/custom/usagov/sass/_carousel.scss
+++ b/web/themes/custom/usagov/sass/_carousel.scss
@@ -66,7 +66,7 @@
 }
 
 .slick-slide {
-  margin-inline: 18px;
+  padding-inline: 18px;
   width: 225px;
 }
 
@@ -328,14 +328,12 @@
   }
 
   .carousel-mover {
-    width: 100%;
     margin: auto;
 
     .usagov-cards,
     .usa-card-group,
     #slides-list {
-      width: 100%;
-      max-width: 100%;
+      max-width: var($homepage, larger-max-width);
       padding: 0;
       margin: 0;
 
